<resources>
    <string name="app_name">都道府県学習アプリ</string>
    <string name="bt_menu_start">はじめから</string>
    <string name="bt_menu_continue">つづきから</string>
    <string name="bt_menu_close">おわる</string>
    <string name="tv_menu_region_select">地方で出題</string>
    <string name="tv_menu_random_select">問題数で出題</string>
    <string name="tv_gp_pft">ここはどこ：</string>
    <string name="tv_gp_pfto">県庁所在地は：</string>
    <string name="bt_gp_ans">解答</string>
    <string name="bt_gp_next">つぎへ</string>
    <string name="bt_gp_stop">中断</string>
    <string name="tv_fns_conglat">これで以上です。\nおつかれさまでした！</string>
    <string name="tv_fns_score">あなたの得点：</string>
    <string name="tv_fns_cheer">満点目指して\n頑張りましょう！</string>
    <string name="bt_fns_close">メニューにもどる</string>
    <string name="bt_check_score">成績をみる</string>
    <string name="tv_score_proper_ans">答え：</string>
    <string name="tv_score_ans">解答：</string>
    <string name="tv_dt_result_ans">あなたの解答：</string>
    <string name="bt_dt_result_back">一覧にもどる</string>
    <string name="tv_gp_correct_ratio">正答率：</string>
    <string name="tv_gp_answer_count">回答数：</string>
    <string name="tv_menu_weakpoint_select">間違いが多い順に出題</string>
    <string name="bt_menu_reset_count">リセット</string>
    <string name="dialog_title">間違いカウントのリセット</string>
    <string name="dialog_msg">間違いカウントをリセットします。よろしいですか？</string>
    <string name="dialog_ok">はい</string>
    <string name="dialog_ng">いいえ</string>
    <string name="dialog_ok_toast">リセットしました</string>
    <string name="dialog_ng_toast">リセットを中止しました</string>

    <string-array name="sp_menu_list">
        <item>10問</item>
        <item>20問</item>
        <item>30問</item>
        <item>全問</item>
    </string-array>

    <string name="bt_tyubu">中部</string>
    <string name="bt_kinki">近畿</string>
    <string name="bt_tohoku">東北</string>
    <string name="bt_hokkaido">北海道</string>
    <string name="bt_kanto">関東</string>
    <string name="bt_tyugoku">中国</string>
    <string name="bt_shikoku">四国</string>
    <string name="bt_kyushu">九州</string>
</resources>
