<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/tv_fns_conglat"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="#000000"
            android:text="@string/tv_fns_score"/>

        <TextView
            android:id="@+id/tvFnsScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text=""/>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/tv_fns_cheer"
        android:textSize="30sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:textSize="20sp"
        android:onClick="backToMenuListener"
        android:layout_margin="10dp"
        android:text="@string/bt_fns_close"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:onClick="gfScoreCheckClickListener"
        android:layout_gravity="right"
        style="@style/checkScoreButton"
        android:textStyle="bold"
        android:textColor="@drawable/button_check_score_text"
        android:text="@string/bt_check_score"/>



</LinearLayout>