<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:layout_gravity="right"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btGpCheckScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="10dp"
            android:textSize="20sp"
            android:onClick="gpCheckScoreClickListener"
            android:text="@string/bt_check_score"
            android:textStyle="bold"
            android:textColor="@drawable/button_check_score_text"
            style="@style/checkScoreButton"/>

        <Button
            android:id="@+id/btGpStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:onClick="stopClickListener"
            android:text="@string/bt_gp_stop"
            android:textStyle="bold"
            android:textColor="@drawable/button_stop_text"
            style="@style/stopButton"/>

    </LinearLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">
        <ImageView
            android:id="@+id/ivGpPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/ivGpResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:text="@string/tv_gp_correct_ratio"/>

                <TextView
                    android:id="@+id/tvGpCorrectRatio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:text="text view"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:text="@string/tv_gp_answer_count"/>

                <TextView
                    android:id="@+id/tvGpNumOfAns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#000000"
                    android:text="text view"/>
            </LinearLayout>

        </LinearLayout>


    </FrameLayout>

    <Button
        android:id="@+id/btGpAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.03"
        android:background="@drawable/button_game_start"
        android:textStyle="bold"
        android:text="@string/bt_gp_ans"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvGpPft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:textColor="#000000"
            android:text="@string/tv_gp_pft"/>

        <EditText
            android:id="@+id/etGpPft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:maxLength="8"
            style="@style/CustomEditText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.07">

        <TextView
            android:id="@+id/tvGpPfto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#000000"
            android:text="@string/tv_gp_pfto"/>

        <EditText
            android:id="@+id/etGpPfto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="20sp"
            android:maxLength="8"
            style="@style/CustomEditText"/>

    </LinearLayout>

    <Button
        android:id="@+id/btGpNext"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="right"
        android:layout_weight="0.02"
        android:textSize="20sp"
        android:onClick="nextClickListener"
        android:layout_marginRight="10dp"
        android:text="@string/bt_gp_next"/>

</LinearLayout>